# kafka-logger

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml  release-plz.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  checks.yml  release-plz.yml
src/: lib.rs
