[package]
name = "kafka-logger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple logger for sending logs to kafka"
repository = "https://github.com/Profiidev/kafka-logger"
categories = ["development-tools::debugging"]
exclude = [".github/", "Cargo.lock", "nextest.toml", "CHANGELOG.md", "cliff.toml", "release-plz.toml", "rustfmt.toml"]
keywords = ["log", "logger", "logging", "kafka"]
readme = "README.md"

[dependencies]
log = { version = "0.4.25", features = ["std"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
